<resources>
    <string name="app_name">Bio-Authentication</string>

    <string name="pin_button" translatable="false">Pin</string>
    <string name="pattern_button">Pattern</string>
    <string name="hint_users">User</string>
    <string name="hint_test_type">Test type</string>
    <string name="empty_values">Select a user and a test type</string>
    <string name="unlock_first">Please Unlock first</string>
    <string name="input_text">Input password</string>
    <string name="welcome_app">Hello Bio-authentication!</string>
    <string name="add_user_button">New user</string>
    <string name="add_user_btn_text">Add User</string>
    <string name="user_name_placeholder">Full Name</string>
    <string name="create_user_text">Create New User</string>
    <string name="user_already_exist">User already exist</string>
    <string name="new_sample">New Sample</string>
    <array name="users_array">
        <item>Jaime</item>
        <item>John</item>
        <item>Sidney</item>
    </array>
    <array name="test_types_array">
        <item>Real</item>
        <item>Impostor</item>
    </array>
    <string name="required_value">Please enter the required values</string>
    <string name="max_length_added">Pin already has the max length</string>
    <string name="reset_sample">Reset last sample</string>
    <string name="alert_dialog_title">Set pin length</string>
    <string name="OK">Ok</string>
    <string name="invalid_number">Select a valid option</string>
    <string name="wrong_password">Wrong password</string>
    <string name="wrong_len4">PIN 4 length must be four digits </string>
    <string name="wrong_len6">PIN 6 length must be six digits </string>
    <string name="wrong_len8">PIN 8 length must be eight digits </string>
    <string name="cancel">Cancel</string>
    <string name="new_sample_added">A new sample was added</string>
    <string name="message" translatable="false">pattern</string>
    <string name="without_add">Sample couldn\'t save</string>
    <string name="full_samples">Already you have added all samples</string>
    <string name="sample_text">"Sample: "</string>
    <string name="train_button">train</string>
    <string name="test_button">test</string>
    <string name="select_option_text">Select an option</string>
    <string name="empty_values_user">Select a valid user</string>
    <string name="error_request">Error requesting to server</string>
    <string name="granted_access">granted access</string>
    <string name="denied_access">Denied access</string>
</resources>
