<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bioauthentication.home.HomeScreenActivity">

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/users"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:text="@string/app_name"
        android:textSize="42sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/users"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:hint="@string/hint_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/test_types"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp" >

        <AutoCompleteTextView
            android:id="@+id/filled_dropdown_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/test_types"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:hint="@string/hint_test_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp" >

        <AutoCompleteTextView
            android:id="@+id/filled_dropdown_test_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test_types"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pin_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight=".5"
            android:text="@string/pin_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pattern_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight=".5"
            android:text="@string/pattern_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="24sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:text="@string/add_user_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textSize="24sp" />


</RelativeLayout>