<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bioauthentication.home.HomeScreenActivity">

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->


    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/users"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_users"
        app:layout_constraintVertical_bias="0.639"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/filled_dropdown_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pin_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight=".5"
            android:text="@string/pin_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pattern_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight=".5"
            android:text="@string/pattern_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="24sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>